# clang-faces

./: CMakeLists.txt  README.md  clang-faces.el  main.cpp  sniper.cpp
cmake/: FindClang.cmake
tests/: class.cpp  templates.cpp  vector.cpp
